Add support for a random post processor. Allows injection of random valuesin the format ${random:int}. Addresses issue https://github.com/gestalt-config/gestalt/issues/40